2013-06-11  Jesse  <jesse.emond@hotmail.com>

	* Client.cs:
	* GameplayScreen.cs:
	* DrawableRectangle.cs:
	* DrawableChampion.cs: 

2013-06-07  Jesse  <jesse.emond@hotmail.com>

	* Client.cs:
	* GameplayScreen.cs:
	* DrawableChampion.cs: 

2013-06-06  Jesse  <jesse.emond@hotmail.com>

	* Game1.cs:
	* Client.cs:
	* TestScreen.cs:
	* GameplayScreen.cs: 

2013-06-06  Jesse  <jesse.emond@hotmail.com>

	* Game1.cs:
	* Client.cs:
	* GREATClient.Linux.csproj:
	* GameplayScreen.cs:
	* GREATClient.Windows.csproj: 

2013-06-06  Jesse  <jesse.emond@hotmail.com>

	* Drawable.cs: 

2013-06-06  Jesse  <jesse.emond@hotmail.com>

	* TestScreen.cs: 

2013-05-28  Jesse  <jesse.emond@hotmail.com>

	* ChangeLog: 

<<<<<<< HEAD
2013-05-28  Jesse  <jesse.emond@hotmail.com>

	* TestScreen.cs: 

2013-05-28  Jesse  <jesse.emond@hotmail.com>

	* ChangeLog:
	* TestScreen.cs:
	* Drawable.cs:
	* DrawableImage.cs: 

<<<<<<< HEAD
2013-05-28  Jesse  <jesse.emond@hotmail.com>

	* TestScreen.cs: 

2013-05-28  Jesse  <jesse.emond@hotmail.com>

	* ChangeLog:
	* TestScreen.cs: 

2013-05-28  Jesse  <jesse.emond@hotmail.com>

	* ChangeLog:
	* TestScreen.cs: 

<<<<<<< HEAD
2013-05-28  Jesse  <>

	* TestScreen.cs:
	* DrawableImage.cs:
	* DrawableCircle.cs:
	* DrawableSprite.cs:
	* DrawableTriangle.cs:
	* DrawableChampion.cs: 

2013-05-22  The Parasithe  <bipbip500@hotmail.com>

	* Game1.cs:
	* IDraw.cs:
	* TestScreen.cs:
	* GREATClient.Linux.csproj:
	* DrawableImage.cs:
	* GREATClient.Windows.csproj:
	* DrawableSprite.cs: 

2013-05-06  The Parasithe  <bipbip500@hotmail.com>

	* Game1.cs:
	* TestScreen.cs:
	* IDraw.cs:
	* Screen.cs:
	* Drawable.cs:
	* Container.cs:
	* DrawableImage.cs:
	* ChampionsInfo.cs:
	* DrawableTileMap.cs:
	* DrawableRectangle.cs:
	* DrawableChampion.cs:
	* DrawableCircleContour.cs: 

<<<<<<< Upstream, based on origin/master
=======
=======
=======
2013-05-28  Jesse  <>

	* Drawable.cs: 

>>>>>>> 4f2ed44... Bugfix, textures are no longer unloaded when the child is removed.