@@ -1,6 +1,11 @@
 2013-06-11  Jesse  <jesse.emond@hotmail.com>
 
 	* Client.cs:
+	* DrawableChampion.cs: 
+
+2013-06-11  Jesse  <jesse.emond@hotmail.com>
+
+	* Client.cs:
 	* GameplayScreen.cs:
 	* DrawableRectangle.cs:
 	* DrawableChampion.cs: 
